--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -1,4 +1,4 @@
-{{ define "title" }}Login{{ end }} {{ define "content" }}
+{{ define "auth/login.html" }}
 <h2>Login</h2>
 <form method="POST" action="/api/auth/login">
   <label>Email:</label><br />
@@ -9,5 +9,5 @@
 
   <button type="submit">Login</button>
 </form>
-<a href="/register">Don't have an account? Register</a>
+<a href="register">Don't have an account? Register</a>
 {{ end }}
